--- a/index.html
+++ b/index.html
@@ -3,81 +3,66 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>12 Bubbles - HALLOWEEN</title>
+<title>12 Bubbles</title>
 <style>
 html, body {
   margin:0; padding:0; height:100vh; overflow:hidden;
   font-family: monospace;
   background-color:#0a0a0a;
-  color:#ff6600;
+  background-image: radial-gradient(circle at 30% 30%, #0ff1 10%, transparent 60%),
+                    radial-gradient(circle at 70% 70%, #ff00ff1a 10%, transparent 60%),
+                    linear-gradient(180deg, #000 0%, #111 100%);
+  color:#0ff;
 }
 
-/* --- LOADING SCREEN --- */
-#loadingScreen {
-  position: fixed; top:0; left:0; width:100%; height:100%;
-  background:#000; display:flex; justify-content:center; align-items:center;
-  color:#ff6600; font-size:12vw; font-weight:bold; z-index:3000;
-  text-align:center;
-  animation:glowPulse 3.5s forwards;
-}
-@keyframes glowPulse {
-  0% { text-shadow:0 0 5px #ff3300, 0 0 10px #ff6600; opacity:0.2; }
-  50% { text-shadow:0 0 20px #ff6600, 0 0 40px #ff9900, 0 0 60px #ffcc00; opacity:1; }
-  100% { text-shadow:0 0 5px #ff3300, 0 0 10px #ff6600; opacity:0.2; }
-}
-
-/* --- HOME SCREEN --- */
 #startBtn, #indexBtn {
-  display:none; margin:0 auto;
+  display:block; margin:0 auto;
   font-size:28px; padding:15px 35px;
-  background: linear-gradient(45deg,#ff6600,#ff9900,#ff3300);
+  background: linear-gradient(45deg,#00ffff,#00ff99,#ff00ff);
   border:none; border-radius:12px; color:white;
   font-weight:bold; text-transform:uppercase;
-  cursor:pointer; box-shadow:0 0 20px #ff6600,0 0 40px #ff6600,0 0 60px #ff3300;
+  cursor:pointer; box-shadow:0 0 20px #0ff,0 0 40px #0ff,0 0 60px #0ff;
   z-index:1000;
 }
-#startBtn { margin-top:30vh; }
+
+#startBtn { margin-top:30vh; } /* center home screen for mobile */
 #indexBtn { margin-top:20px; }
 
-/* --- Countdown & Score --- */
 #countdown {
   position:fixed; top:50%; left:50%;
   transform:translate(-50%,-50%);
-  font-size:80px; color:#ff6600;
-  text-shadow:0 0 20px #ff6600,0 0 40px #ff9900;
+  font-size:80px; color:#0ff;
+  text-shadow:0 0 20px #0ff,0 0 40px #0ff;
   z-index:1001; display:none;
 }
+
 #scoreContainer {
   position:fixed; top:20px; left:50%;
   transform:translateX(-50%);
   z-index:1001; text-align:center; display:none;
 }
 #highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
-#score { font-size:28px; color:#ff6600; }
+#score { font-size:28px; color:#0ff; }
 #lives { font-size:20px; color:#f00; margin-top:5px; }
 
-/* --- Bubbles --- */
 .bubble {
   width:80px; height:80px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
   font-size:24px; font-weight:bold; color:#fff;
-  background:linear-gradient(135deg,#ff6600,#ff9900);
-  border:2px solid #ff6600; box-shadow:0 0 15px #ff6600,0 0 30px #ff9900 inset;
+  background:linear-gradient(135deg,#00ffff,#ff00ff);
+  border:2px solid #0ff; box-shadow:0 0 15px #0ff,0 0 30px #0ff inset;
   position:absolute; cursor:pointer;
 }
 .bubble.rare2x { background: linear-gradient(135deg,#ffff00,#ff9900); color:#000; font-size:28px; box-shadow:0 0 20px #ff0,0 0 40px #ff0 inset;}
 .bubble.rare144 { background: linear-gradient(135deg,#00ff00,#00aa00); color:#000; font-size:28px; box-shadow:0 0 20px #0f0,0 0 40px #0f0 inset;}
 .bubble.triple { background: linear-gradient(135deg,#ff00ff,#9900ff); color:#fff; font-size:24px; box-shadow:0 0 20px #f0f,0 0 40px #f0f inset;}
-.bubble.gravity { background: linear-gradient(135deg,#ff6600,#ffff00); color:#000; font-size:28px; box-shadow:0 0 25px #ff6600,0 0 50px #ffff00 inset;}
-.bubble.invert { background: linear-gradient(135deg,#000,#fff); color:#000; font-size:24px; box-shadow:0 0 20px #fff inset;}
-.bubble.instawin { background: linear-gradient(135deg,#ff0000,#990000); color:#fff; font-size:24px; box-shadow:0 0 20px #f00 inset;}
+.bubble.gravity { background: linear-gradient(135deg,#00ffff,#ff0); color:#000; font-size:28px; box-shadow:0 0 25px #0ff,0 0 50px #ff0 inset; }
 
-/* --- Index Panel --- */
 #indexPanel {
   position:fixed; top:100%; left:0; width:100%;
   max-height:70%; background:rgba(10,10,10,0.95);
   overflow-y:auto; transition:top 0.5s ease; padding:20px;
-  z-index:999; box-shadow:0 -5px 30px #ff6600;
+  z-index:999; box-shadow:0 -5px 30px #0ff;
 }
 #indexPanel h2 { text-transform:uppercase; }
 #indexPanel .closeBtn {
@@ -88,35 +73,32 @@ html, body {
 .indexItem .bubbleImg {
   width:60px; height:60px; margin-right:15px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
-  font-weight:bold; color:#fff; border:2px solid #ff6600;
-  box-shadow:0 0 15px #ff6600 inset; animation:float 1s infinite alternate;
+  font-weight:bold; color:#fff; border:2px solid #0ff;
+  box-shadow:0 0 15px #0ff inset; animation:float 1s infinite alternate;
 }
 .indexItem .desc { flex:1; }
 .indexItem .rarity { font-weight:bold; }
 
 @keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
 
-/* --- End Screen --- */
 #endScreen {
   position:fixed; top:0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); display:none; flex-direction:column;
-  justify-content:center; align-items:center; color:#ff6600; font-size:40px;
+  justify-content:center; align-items:center; color:#0ff; font-size:40px;
   z-index:1500; text-align:center;
 }
 #continueBtn {
   margin-top:30px; font-size:26px; padding:15px 40px;
   border:none; border-radius:10px; cursor:pointer; color:white;
-  background: linear-gradient(45deg,#ff6600,#ff9900,#ff3300);
-  box-shadow:0 0 20px #ff6600,0 0 40px #ff6600;
+  background: linear-gradient(45deg,#00ffff,#00ff99,#ff00ff);
+  box-shadow:0 0 20px #0ff,0 0 40px #0ff;
 }
 
-/* --- Version --- */
 #versionLabel {
   position:fixed; top:10px; right:10px; font-size:16px;
   color:rgba(255,255,255,0.3); font-weight:bold; z-index:1002; pointer-events:none;
 }
 
-/* --- Easter Egg --- */
 #easterEgg {
   position: fixed; top: 0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); color:red; font-size:150px;
@@ -141,9 +123,8 @@ html, body {
 </head>
 <body>
 
-<div id="loadingScreen">Level 12 studio</div>
+<div id="versionLabel">Released 1.12.0</div>
 
-<div id="versionLabel">Released 1.2.3</div>
 <button id="startBtn">START</button>
 <button id="indexBtn">INDEX</button>
 
@@ -154,9 +135,7 @@ html, body {
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#ff9900); color:#000;">12×2</div><div class="desc"><span class="rarity">Vzácná 0,25%:</span> Zdvojnásobí skóre</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ff00,#00aa00); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff00ff,#9900ff);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff6600,#ffff00); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#000,#fff); color:#000;">!12!</div><div class="desc"><span class="rarity">Vzácná 1,5%:</span> Obrátí barvy na 5s +10 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#990000); color:#fff;">?12?</div><div class="desc"><span class="rarity">Vzácná 0,1%:</span> Okamžitá výhra +999999999 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ffff,#ff0); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
 </div>
 
 <div id="countdown"></div>
@@ -191,58 +170,48 @@ const continueBtn=document.getElementById('continueBtn');
 const versionLabel=document.getElementById('versionLabel');
 const easterEl=document.getElementById('easterEgg');
 const closeBtn=document.querySelector('#indexPanel .closeBtn');
-const loadingScreen=document.getElementById('loadingScreen');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
 
-// --- LOADING SCREEN ---
-window.addEventListener('load',()=>{
-  setTimeout(()=>{
-    loadingScreen.style.display='none';
-    startBtn.style.display='block';
-    indexBtn.style.display='block';
-    attachButtonEvents();
-  },3550);
-});
+startBtn.addEventListener('click',startCountdown);
 
-// --- BUTTON LOGIC ---
-function attachButtonEvents(){
-  startBtn.addEventListener('click',startCountdown);
-  indexBtn.addEventListener('click',(e)=>{
-    e.stopPropagation();
-    if(indexPanel.style.top==='30%'){
-      indexPanel.style.top='100%';
-      startBtn.style.display='block';
-      indexBtn.style.display='block';
-    } else {
-      indexPanel.style.top='30%';
-      startBtn.style.display='none';
-      indexBtn.style.display='none';
-    }
-  });
-  closeBtn.addEventListener('click',(e)=>{
-    e.stopPropagation();
+indexBtn.addEventListener('click',(e)=>{
+  e.stopPropagation();
+  if(indexPanel.style.top==='30%'){
     indexPanel.style.top='100%';
     startBtn.style.display='block';
     indexBtn.style.display='block';
-  });
-  indexPanel.addEventListener('click',e=>e.stopPropagation());
-  document.body.addEventListener('click',()=>{
-    if(indexPanel.style.top==='30%'){
-      indexPanel.style.top='100%';
-      startBtn.style.display='block';
-      indexBtn.style.display='block';
-    }
-  });
-  continueBtn.addEventListener('click',()=>{
-    endScreen.style.display='none';
+  } else {
+    indexPanel.style.top='30%';
+    startBtn.style.display='none';
+    indexBtn.style.display='none';
+  }
+});
+
+closeBtn.addEventListener('click',(e)=>{
+  e.stopPropagation();
+  indexPanel.style.top='100%';
+  startBtn.style.display='block';
+  indexBtn.style.display='block';
+});
+
+indexPanel.addEventListener('click',e=>e.stopPropagation());
+
+document.body.addEventListener('click',()=>{
+  if(indexPanel.style.top==='30%'){
+    indexPanel.style.top='100%';
     startBtn.style.display='block';
     indexBtn.style.display='block';
-    versionLabel.style.display='block';
-  });
-}
+  }
+});
 
-// --- Countdown ---
+continueBtn.addEventListener('click',()=>{
+  endScreen.style.display='none';
+  startBtn.style.display='block';
+  indexBtn.style.display='block';
+  versionLabel.style.display='block';
+});
+
 function startCountdown(){
   versionLabel.style.display='none';
   startBtn.style.display='none';
@@ -262,7 +231,6 @@ function startCountdown(){
   },1000);
 }
 
-// --- GAME LOGIC ---
 function startGame(){
   score=0; lives=3; bubbles=[]; gameRunning=true; startTime=Date.now();
   scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
@@ -270,7 +238,6 @@ function startGame(){
   requestAnimationFrame(updateBubbles);
 }
 
-// --- Bubble spawning ---
 function spawnBubble(){
   if(!gameRunning) return;
   const elapsed=(Date.now()-startTime)/1000;
@@ -283,8 +250,6 @@ function spawnBubble(){
   else if(chance<=0.0125){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
   else if(chance<=0.0325){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
   else if(chance<=0.0625){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
-  else if(chance<=0.0775){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
-  else if(chance<=0.0005){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
   else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
 
   const size=Math.random()*60+60;
@@ -298,7 +263,7 @@ function spawnBubble(){
 
   const pop=()=>{
     if(!gameRunning) return;
-    if(['2x','144','triple','gravity','invert','instawin'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
+    if(['2x','144','triple','gravity'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
     bubble.remove();
     bubbles=bubbles.filter(b=>b!==bubble);
 
@@ -312,14 +277,6 @@ function spawnBubble(){
         b.style.left=(bx-parseFloat(b.style.width)/2)+'px';
         b.style.top=(by-parseFloat(b.style.height)/2)+'px';
       });
-    }
-    else if(bubble.dataset.type==="invert"){
-      document.body.style.filter="invert(1)";
-      score+=10;
-      setTimeout(()=>{ document.body.style.filter="invert(0)"; },5000);
-    }
-    else if(bubble.dataset.type==="instawin"){
-      score=999999999;
     }
     else score++;
 
@@ -372,10 +329,11 @@ function updateBubbles(){
   requestAnimationFrame(updateBubbles);
 }
 
-// --- END GAME ---
 function endGame(){
   gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
   scoreContainer.style.display='none';
+
+  // Easter egg
   if(score===12 || score<=3){
     easterEl.textContent = (score===12?'12':'BRUH');
     easterEl.style.display='flex';
@@ -390,6 +348,7 @@ function showEndScreen(){
   finalScoreText.textContent="Tvé skóre: "+score;
   endScreen.style.display='flex';
 }
+
 </script>
 </body>
 </html>
